tests/NormalTests/paczka1/small_fuzzy/41992684.err
Error in line 2: 7OE4FS1SOH9 S642 49,7
Error in line 11: pZ6lUIEmq S307 82,4
Error in line 4: pcYg S642 24,5
Error in line 10: cFPb A109 14,0
Error in line 14: cFPb S307 5,9
